fix: implement sheet modal component

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,7 @@ body {
   transition-property: opacity, transform, filter, background;
   transition-timing-function: ease-in-out;
   transition-duration: 500ms;
+  background: black;
 }
 
 .page-transition {
